--- a/portfolio.html
+++ b/portfolio.html
@@ -26,23 +26,39 @@
 
 <div class ="images">
 
-<div class="title1">Hangman</div>
-<img class="images1" src="assets/images/laptop.jpg" width="200" height="200" alt="open laptop">
-<div class="title2"> Trivia Game </div>
-<img class="images2"src="assets/images/foggypurple.jpg" width="200" height="200" alt="foggy colors orange green purple">
-<div class="title3">Rock Paper Scissors</div>
-<img class="images3"src="assets/images/fashion.orange.jpg" width="200" height="200" alt="woman in orange dress with blue walls outside">
-<div class="title4">RPG Game</div>
-<img class="images4"src="assets/images/cityvegas.jpg" width="200" height="200" alt="vegas the strip">
-<div class="title5">Rutgers Info Widget</div>
-<img class="images5" src="assets/images/businessguy.jpg" width="200" height="200" alt="man in suit talking">
+<div id="image1">
+<h3>Hangman</h3>
+<img src="assets/images/laptop.jpg" width="200" height="200" alt="open laptop">
+</div>
+
+<div id="image2"> 
+    <h3>Trivia Game </h3>
+    <img src="assets/images/foggypurple.jpg" width="200" height="200" alt="foggy colors orange green purple">
+</div>
+
+<div id="image3">
+    <h3>Rock Paper Scissors</h3>
+    <img src="assets/images/fashion.orange.jpg" width="200" height="200" alt="woman in orange dress with blue walls outside">
+</div>
+
+<div id="image4">
+    <h3>RPG Game</h3>
+    <img src="assets/images/cityvegas.jpg" width="200" height="200" alt="vegas the strip">
+</div>
+
+<div id="image5">
+    <h3>Rutgers Info Widget</h3>
+    <img  src="assets/images/businessguy.jpg" width="200" height="200" alt="man in suit talking">
+</div>
+
+
 </div>
 </div>
 
 <br>
-<div id="above"></div>
-<div id="footer">
+
 <footer>Copyright</footer>
+
 
 </body>
 </html>
