--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
     <header id="name">Mai Houa Vue</header>
 
-<div id= "nav-container"> 
-    <nav id="nav2">
-    <a href="./index.html">About</a>
-    <a href="./contact.html">Contact</a>
-    <a href="./portfolio.html">Portfolio</a>
-    </nav>
-</div>
+    <div id="nav-container">
+        <nav id="nav2">
+            <a href="./index.html">About</a>
+            <a href="./contact.html">Contact</a>
+            <a href="./portfolio.html">Portfolio</a>
+        </nav>
+    </div>
 
     <div id="div1">
         <h2>About Me</h2>
@@ -25,29 +25,27 @@
         <hr>
         <img src="assets/images/MHV.jpg" width="200" height="250" alt="me">
 
-<br>
-        <p>Hi! or Nyob Zoo as I say in Hmong. I went to school at UW Madison and graduated with a Zoology degree. Most
-            people say I must love animals. Well, actully you can so so much more with the Zoology degree. I initially
-            wanted to work in a lab and study cancer cells. Well, by my junior year, I was like, "What the heck am I
-            doing?!" So then I started to have interest in the public health and somehow ended up Medicaid
-            insurance company doing community health. I love this because I get to help who with low income get
-            assistance with healthcare and resources.
+        <br>
+        <p>Hi! or Nyob Zoo as I say in Hmong.  You can call me Mai (pronounced like 'my'). I went to school at UW Madison 
+            and graduated with a Zoology degree. Most people say I must love animals. Well, actully you can do so much more with the Zoology degree. I initially
+            wanted to work in a lab and study cancer. Well, by my junior year, I was like, "What the heck am I
+            doing?!" So then I started to have interest in the public health and somehow ended up in the Medicaid
+            insurance company doing community health. I love this because I work with low income folks and help them get
+            assistance with healthcare and community resources.
         </p>
 
         <br>
         <p>Okay enough about work and school. Let's focus on the fun stuff! I like to watch comedy movies. I like Chuck
             Norris jokes. I am almost the middle child? I say that with a question mark because in total, my siblings
-            and Iequals 8. Yes, a big family but a wonderful family! We all moved to different parts of WI after finishing
-            college. I wanted to own my own bakery when I was little. Funny thing is, I'm not a good as a
-            baker.My little sister is actually very good at baking and decorating. I did work a bakery for almost a year
+            and I equals 8. Yes, a big family but a wonderful family! We all moved to different parts of WI after
+            finishing college. I wanted to own my own bakery when I was little. Funny thing is, I'm not a good baker! My little
+            sister is actually very good at baking and decorating. I did work at a bakery for almost a year
             and they taught me how to decorate, which I loved. It's so much fun. It's actually my hidden talent!</p>
     </div>
-<br>
+    <br>
 
 
-<footer>Copyright</footer>
-        
-
+    <footer>Copyright</footer>
 </body>
 
 </html>
