--- a/contact.html
+++ b/contact.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <title>Contact</title>
 
-    <link rel="stylesheet" type="text/css" href="assets/css/style2.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style3.css">
 </head>
     <body>
-        <header id="name">Mai Houa Vue</header>
+        <header>Mai Houa Vue</header>
     
     <div id= "nav-container"> 
         <nav id="nav2">
         <a href="./index.html">About</a>
-        <a href="./contact.html">Contact</a>
         <a href="./portfolio.html">Portfolio</a>
+        <a href="./contact.html">Contact</a>
         </nav>
     </div>
 
