changing content border color

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header id="name">Mai Houa Vue</header>
+    <header>Mai Houa Vue</header>
 
     <div id="nav-container">
         <nav id="nav2">
