fixing contact class and id

--- a/contact.html
+++ b/contact.html
@@ -26,19 +26,19 @@
 
 <form action="/action_page.php">
 Name: <br>
-<input class="contact-name" type="text" name="firstname">
+<input class="contact-info" type="text" name="firstname">
 
 <br>
 
 Email: <br>
-<input class="contact-email" type="text" name="email">
+<input class="contact-info" type="text" name="email">
 
 <br>
 
 Message <br>
 </form>
 
-<textarea class="contact-msg"></textarea>
+<textarea id="contact-msg"></textarea>
 <br>
 <input id="button" type="submit" value="Submit">
 </div>
