--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h2>About Me</h2>
 
         <hr>
-        <img id src="assets/images/flower.jpg" width="200" alt="Mai Houa">
+        <img src="assets/images/flower.jpg" width="200" alt="Mai Houa">
 
         <br>
         <p>Hi! or Nyob Zoo as I say in Hmong.  You can call me Mai (pronounced like 'my'). I went to school at UW Madison 
